--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
 	"author": "rolandpoulter",
 	"version": "0.0.1",
 	"keywords": ["spec", "bdd", "test"],
-	"homepage": "https://github.com/xthegerms/js-spec",
-	"repository": {"type": "git", "url": "git://github.com/xthegerms/js-spec"},
+	"homepage": "https://github.com/rolandpoulter/js-spec",
+	"browserify": "./lib/Spec.dom.js",
+	"repository": {"type": "git", "url": "git://github.com/rolandpoulter/js-spec"},
 	"description": "",
 	"contributors": [],
 	"dependencies": {
-		"mttr": ">= 0.0.1",
-		"ptns": ">= 0.0.1",
+		"mttr": "0.0.1",
+		"ptns": "0.0.1",
+
 		"chai": ">= 1.0.4",
+		"eyes": ">= 0.1.7",
 		"async": ">= 0.1.22",
 		"sinon": ">= 1.3.4",
 		"charm": ">= 0.1.0",
-		"eyes": ">= 0.1.7"
+		"express": ">= 0.0.1",
+		"browserify": ">= 0.0.1"
 	},
-	"devDependencies": {
-		"bxjs": ">= 0.0.1",
-		"express": ">= 0.0.1"
-	},
-	"scripts": {"test": "node ./script/test.js"}
+	"scripts": {
+		"build": "node ./script/build.js",
+		"test": "node ./script/test.js"
+	}
 }
