--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "spc",
 	"main": "./lib/Spec.js",
 	"author": "rolandpoulter",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"keywords": ["spec", "bdd", "test"],
 	"homepage": "https://github.com/rolandpoulter/js-spec",
 	"browserify": "./lib/Spec.dom.js",
@@ -13,13 +13,16 @@
 		"mttr": "0.0.1",
 		"ptns": "0.0.2",
 
-		"chai": ">= 1.0.4",
-		"eyes": ">= 0.1.7",
-		"async": ">= 0.1.22",
-		"sinon": ">= 1.3.4",
-		"charm": ">= 0.1.0",
-		"express": ">= 0.0.1",
-		"browserify": ">= 0.0.1"
+		"chai": "1.2.0",
+		"eyes": "0.1.8",
+		"async": "0.1.22",
+		"sinon": "1.4.2",
+		"charm": "0.1.0",
+		"browserify": "1.16.1",
+		"sinon-chai": "2.1.2"
+	},
+	"devDependencies": {
+		"express": "3.0.0rc5"
 	},
 	"scripts": {
 		"build": "node ./script/build.js",
